# example-project-basic

./: cabal.project  example-project-basic.cabal  shell.nix
app/: Main.hs
