cabal-version:      2.4
name:               example-project-basic
version:            0.1.0.0

author:             perturbing
maintainer:         thomas.vellekoop@iohk.io

executable example-project-basic.cabal
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-script-utils
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
